@@ -2,6 +2,7 @@ package com.example.projecttrendshopapp.service;
 
 import com.example.projecttrendshopapp.dao.entity.BasketEntity;
 import com.example.projecttrendshopapp.dao.entity.OrderEntity;
+import com.example.projecttrendshopapp.dao.entity.UsersEntity;
 import com.example.projecttrendshopapp.dao.repository.*;
 import com.example.projecttrendshopapp.exception.NotFoundException;
 import com.example.projecttrendshopapp.mapper.BasketMapper;
@@ -10,13 +11,15 @@ import com.example.projecttrendshopapp.model.dto.OrderDto;
 import com.example.projecttrendshopapp.model.enums.Products;
 import com.example.projecttrendshopapp.model.enums.Status;
 import com.example.projecttrendshopapp.util.ValidationUtil;
+import io.github.benas.randombeans.EnhancedRandomBuilder;
+import io.github.benas.randombeans.api.EnhancedRandom;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.ArrayList;
-import java.util.List;
+import java.time.LocalDate;
+import java.util.*;
 
 @Service
 @Slf4j
@@ -31,12 +34,13 @@ public class OrderService {
     private final ElectricalEquipmentRepository electricalEquipmentRepository;
     private final BasketMapper basketMapper;
     private final ValidationUtil validationUtil;
+    private final UsersRepository usersRepository;
 
     @Transactional
     public List<OrderDto> getAllInformation() {
         log.info("ActionLog.getAllInformation.started.");
         var orderEntities = orderRepository.findAll();
-        var orderDtoList = orderEntities.stream().map(orderMapper::mapToDto).toList();
+        var orderDtoList = orderEntities.stream().map(this::getOrderDto).toList();
         log.info("ActionLog.getAllInformation.end.");
         return orderDtoList;
     }
@@ -47,8 +51,9 @@ public class OrderService {
         var baskets = basketRepository.findByStatusAndUserId(Status.SELECTED, userId);
         generalStock(baskets);
         var orderEntity = OrderEntity.builder()
-                .users(baskets.getFirst().getUser())
+                .users(baskets.get(0).getUser())
                 .baskets(baskets)
+                .createdAt(LocalDate.now())
                 .build();
         baskets.forEach(it -> it.setOrder(orderEntity));
         orderRepository.save(orderEntity);
@@ -59,27 +64,33 @@ public class OrderService {
     public OrderDto getById(Long orderId) {
         log.info("ActionLog.getById.started: orderId {}", orderId);
         OrderEntity order = orderRepository.findById(orderId).orElseThrow(() -> new NotFoundException("order not found"));
+        var orderDto = getOrderDto(order);
+        log.info("ActionLog.getById.started: orderId {}", orderId);
+        return orderDto;
+    }
+
+    private OrderDto getOrderDto(OrderEntity order) {
         List<Object> products = new ArrayList<>();
         for (BasketEntity basketEntity : order.getBaskets()) {
             if (basketEntity.getStatus().equals(Status.SELECTED)) {
                 if (basketEntity.getProductName().equals(Products.SHIRT)) {
                     var product = shirtsRepository.findById(basketEntity.getProductId()).orElseThrow(() -> new NotFoundException("basketEntity.getProductId() not found"));
-                    products.add(basketMapper.mapShirtEntityToDto(product));
+                    products.add(basketMapper.mapShirtEntityToDto(product, basketEntity.getId()));
                 } else if (basketEntity.getProductName().equals(Products.TROUSERS)) {
                     var product = trousersRepository.findById(basketEntity.getProductId()).orElseThrow(() -> new NotFoundException("basketEntity.getProductId() not found"));
-                    products.add(basketMapper.mapTrousersEntityToDto(product));
+                    products.add(basketMapper.mapTrousersEntityToDto(product, basketEntity.getId()));
                 } else if (basketEntity.getProductName().equals(Products.SHOES)) {
                     var product = shoesRepository.findById(basketEntity.getProductId()).orElseThrow(() -> new NotFoundException("basketEntity.getProductId() not found"));
-                    products.add(basketMapper.mapShoesEntityToDto(product));
+                    products.add(basketMapper.mapShoesEntityToDto(product, basketEntity.getId()));
                 } else if (basketEntity.getProductName().equals(Products.ELECTRICAL_EQUIPMENTS)) {
                     var product = electricalEquipmentRepository.findById(basketEntity.getProductId()).orElseThrow(() -> new NotFoundException("basketEntity.getProductId() not found"));
-                    products.add(basketMapper.mapElectricalEntityToDto(product));
+                    products.add(basketMapper.mapElectricalEntityToDto(product, basketEntity.getId()));
                 }
             }
         }
         OrderDto orderDto = orderMapper.mapToDto(order);
         orderDto.setBaskets(products);
-        log.info("ActionLog.getById.started: orderId {}", orderId);
+
         return orderDto;
     }
 
@@ -92,19 +103,49 @@ public class OrderService {
     public void generalStock(List<BasketEntity> baskets) {
         for (BasketEntity basketEntity : baskets) {
             if (basketEntity.getProductName().equals(Products.SHOES)) {
-                var shoesEntity = shoesRepository.findById(basketEntity.getProductId()).orElseThrow();
+                var shoesEntity = shoesRepository.findById(basketEntity.getProductId()).orElseThrow(() -> new NotFoundException("basketEntity.getProductId()"));
                 shoesEntity.setCount(shoesEntity.getCount() - 1);
             } else if (basketEntity.getProductName().equals(Products.SHIRT)) {
-                var shirtEntity = shirtsRepository.findById(basketEntity.getProductId()).orElseThrow();
+                var shirtEntity = shirtsRepository.findById(basketEntity.getProductId()).orElseThrow(() -> new NotFoundException("basketEntity.getProductId()"));
                 shirtEntity.setCounter(shirtEntity.getCounter() - 1);
             } else if (basketEntity.getProductName().equals(Products.TROUSERS)) {
-                var trousersEntity = trousersRepository.findById(basketEntity.getProductId()).orElseThrow();
+                var trousersEntity = trousersRepository.findById(basketEntity.getProductId()).orElseThrow(() -> new NotFoundException("basketEntity.getProductId()"));
                 trousersEntity.setCounter(trousersEntity.getCounter() - 1);
             } else if (basketEntity.getProductName().equals(Products.ELECTRICAL_EQUIPMENTS)) {
-                var electricalEquipmentsEntity = electricalEquipmentRepository.findById(basketEntity.getProductId()).orElseThrow();
+                var electricalEquipmentsEntity = electricalEquipmentRepository.findById(basketEntity.getProductId()).orElseThrow(() -> new NotFoundException("basketEntity.getProductId()"));
                 electricalEquipmentsEntity.setCount(electricalEquipmentsEntity.getCount() - 1);
             }
         }
+    }
+
+    public List<UsersEntity> generateCashBack() {
+        log.info("ActionLog.getAll.started.");
+        List<OrderEntity> orders = orderRepository.findOrderEntitiesByCreatedAtAfter(LocalDate.now().minusMonths(1));
+        Double counter = 0.0;
+        Set<Long> userIds = new HashSet<>();
+        List<UsersEntity> usersEntityList = new ArrayList<>();
+        for (OrderEntity orderEntity : orders) {
+            Long userId = orderEntity.getUsers().getId();
+            userIds.add(userId);
+        }
+        for (Long id : userIds) {
+            List<OrderEntity> usersOrder = orders.stream().filter(it -> Objects.equals(it.getUsers().getId(), id)).toList();
+            for (OrderEntity order : usersOrder) {
+                counter += order.getProductsPrice();
+                if (order.getProductsPrice() > 150){
+                    order.setFreeDelivery(Boolean.TRUE);
+                }
+            }
+            if (counter > 500) {
+                UsersEntity usersEntity = usersRepository.findById(id).orElseThrow(() -> new NotFoundException("userId not found"));
+                usersEntity.setBalance(usersEntity.getBalance() + (counter * 5) / 100);
+                usersRepository.save(usersEntity);
+                usersEntityList.add(usersEntity);
+
+            }
+        }
+        log.info("ActionLog.getAll.end");
+        return usersEntityList;
     }
 
 }
